--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="hero-content">
                     <div class="hero-text">
                         <p class="hero-greeting">SEJAM BEM-VINDOS AO MEU PORTFÓLIO!</p>
-                        <h1 class="hero-title">Davi Gonçalves<br><span class="hero-highlight">Gonçalves</span></h1>
+                        <h1 class="hero-title">Davi<br><span class="hero-highlight">Gonçalves</span></h1>
                         <p class="hero-subtitle">Especialista em Business Intelligence | Analista de Dados | Desenvolvedor Python</p>
                         <p class="hero-location">📍 São Paulo, Brasil</p>
                         <div class="hero-buttons">
@@ -630,3 +630,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
