--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Davi Gonçalves - Especialista em Business Intelligence, Power BI e Python. Analista de Dados e Desenvolvedor com experiência em automação e dashboards estratégicos.">
+    <meta name="description" content="Davi Gonçalves - VBA, Business Intelligence, Power BI e Python. Analista de Dados e Desenvolvedor com experiência em automação e dashboards estratégicos.">
     <meta name="keywords" content="Davi Gonçalves, Power BI, Python, Business Intelligence, Dashboard, Automação, Data Analysis, Developer">
     <meta name="author" content="Davi Gonçalves">
 
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Davi Gonçalves - Business Intelligence & Python Developer">
-    <meta property="og:description" content="Especialista em Business Intelligence, Power BI e automação com Python. Transformando dados em insights estratégicos.">
+    <meta property="og:description" content="Analista de Dados, focado em Power BI e automação com Python. Transformando dados em insights estratégicos.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://davi.dev">
     <meta property="og:image" content="https://davi.dev/preview-image.jpg">
@@ -86,7 +86,7 @@
                     <div class="hero-text">
                         <p class="hero-greeting">SEJAM BEM-VINDOS AO MEU PORTFÓLIO!</p>
                         <h1 class="hero-title">Davi<br><span class="hero-highlight">Gonçalves</span></h1>
-                        <p class="hero-subtitle">Especialista em Business Intelligence | Analista de Dados | Desenvolvedor Python</p>
+                        <p class="hero-subtitle">Analista de Suporte | Automação de Tarefas | Business Intelligence | Analista de Dados | Desenvolvedor Python | Melhoria Contínua</p>
                         <p class="hero-location">📍 São Paulo, Brasil</p>
                         <div class="hero-buttons">
                             <a href="#projetos" class="btn btn-primary">
@@ -132,14 +132,14 @@
                 <div class="section-header">
                     <span class="section-tag">SOBRE MIM</span>
                     <h2 class="section-title">Transformando dados em<br><span class="text-gradient">insights estratégicos</span></h2>
-                    <p class="section-subtitle">Especialista em Business Intelligence com foco em Power BI, Python e automação de processos.</p>
+                    <p class="section-subtitle">Analista de Dados, focado em Power BI e automação com Python. Transformando dados em insights estratégicos.</p>
                 </div>
 
                 <div class="about-grid">
                     <div class="about-content">
                         <div class="about-text">
                             <h3>Minha Jornada</h3>
-                            <p>Sou Analista de Suporte da <strong>Penske Logistics</strong>, onde desenvolvimento dashboards estratégicos e automações que impactam diretamente nos resultados da empresa.</p>
+                            <p>Sou Analista de Suporte da <strong>Penske Logistics</strong>, onde realizo diversos desenvolvimentos de dashboards estratégicos e automações que impactam diretamente nos resultados da empresa.</p>
 
                             <p>Com mais de <strong>3 anos de experiência</strong>, me especializo em transformar dados complexos em visualizações claras e acionáveis, sempre buscando otimizar processos e gerar valor para o negócio.</p>
 
@@ -630,4 +630,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
